src/linter/checks/snapshots/notabene__linter__checks__content__tests__empty_section-2.snap
---
source: src/linter/checks/content.rs
expression: "lint(&changelog, &ruleset, None)"
---
- rule: EmptySection
  span:
    start: 2
    end: 18446744073709551615
  path: ~
- rule: EmptySection
  span:
    start: 3
    end: 18446744073709551615
  path: ~
- rule: EmptySection
  span:
    start: 4
    end: 18446744073709551615
  path: ~
