src/linter/checks/snapshots/notabene__linter__checks__content__tests__empty_section-3.snap
---
source: src/linter/checks/content.rs
expression: linter.lint(&changelog)
---
- rule: EmptySection
  location:
    start: 1
    end: 18446744073709551615
  path: ~
