src/linter/checks/snapshots/notabene__linter__checks__content__tests__invalid_section-2.snap
---
source: src/linter/checks/content.rs
expression: linter.lint(&changelog)
---
- rule: InvalidSectionHeading
  location:
    start: 1
    end: 18446744073709551615
  path: ~
