src/linter/checks/snapshots/notabene__linter__checks__content__tests__unknown_change_type-2.snap
---
source: src/linter/checks/content.rs
expression: linter.lint(&changelog)
---
- rule: UnknownChangeType
  location:
    start: 1
    end: 18446744073709551615
  path: ~
- rule: UnknownChangeType
  location:
    start: 2
    end: 18446744073709551615
  path: ~
